2017.8/_sources/plugins/available/longitudinal/index.txt
longitudinal
============

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	This QIIME 2 plugin supports methods for analysis of time series analysis, involving either paired sample comparisons or longitudinal study designs.<br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.8.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/qiime2/q2-longitudinal" rel="noopener">https://github.com/qiime2/q2-longitudinal</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           Please post to the QIIME 2 forum for help with this plugin: <a href="https://forum.qiime2.org" rel="noopener">https://forum.qiime2.org</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           No citation available. Cite plugin website: <a href="https://github.com/qiime2/q2-longitudinal" rel="noopener">https://github.com/qiime2/q2-longitudinal</a><br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


This plugin does not have any methods.


Visualizers
-----------


.. toctree::
   :maxdepth: 1

   
   linear_mixed_effects
   
   pairwise_differences
   
   pairwise_distances
   
